# chronos

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.scratch  FRONTEND_REPOSITORIES.md  FULL_TODO.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  Justfile  LICENSE  LICENSE.txt  PROTOCOLS.md  README.md  SECURITY.md  bootstrap.ps1  bootstrap.sh  chronos_whitepaper.md
.VSCodeCounter/2026-07-08_21-01-14/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-07-08_21-03-48/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2026-07-08_21-03-55/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/agents/: chronos-workspace.agent.md
apps/chronos-mobile/: README.md
apps/chronos-mobile/android/: README.md
apps/chronos-mobile/ios/: README.md
apps/chronos-web/: README.md  index.html
configs/: chronos-dir.toml  chronos-lite.toml  chronosd.toml
crates/chronos-core/: Cargo.toml  chronos.udl
crates/chronos-core/benches/: constant_time.rs
crates/chronos-core/src/: anonymity_metrics.rs  clock.rs  fountain.rs  framing.rs  gf28.rs  handshake.rs  handshake_protocol.rs  hybrid_route.rs  kani_harness.rs  kat_tests.rs  key_store.rs  lib.rs  mix_policy.rs  pow.rs  pow_admission.rs  ratchet.rs  relay_handler.rs  relay_packet.rs  route_layer.rs  secure_cell.rs  session.rs  shard_stream.rs  sphinx.rs  tdm.rs  traffic_analysis.rs
crates/chronos-dir/: Cargo.toml
crates/chronos-dir/src/: api.rs  consensus.rs  consensus_store.rs  main.rs  signed_record.rs  store.rs
crates/chronos-lite/: Cargo.toml
crates/chronos-lite/src/: config.rs  dpf_store.rs  main.rs  secure_udp.rs  webrtc_turn.rs
crates/chronos-sys-dataplane/: Cargo.toml
crates/chronos-sys-dataplane/src/: af_xdp_proto.rs  io_uring_proto.rs  lib.rs  ring_model.rs  timestamping.rs  umem.rs
crates/chronos-wasm/: Cargo.toml
crates/chronos-wasm/src/: bindings.rs  equihash.rs  hydra_tcp.rs  imes.rs  lib.rs  mobile_power.rs  stego_ws.rs  transport.rs
crates/chronosd/: Cargo.toml
crates/chronosd/src/: af_xdp_proto.rs  cache_resctrl.rs  config.rs  dataplane_probe.rs  io_uring_proto.rs  main.rs  metrics.rs  mixing_engine.rs  nic_control.rs  pow_admission.rs  queue.rs  socket_tiering.rs  toeplitz_rss.rs  udp_relay.rs
docs/: HOW_TO_BEAT_THE_TRILEMMA.md  README.md  SECURITY_VALIDATION_PLAN.md  TRILEMMA_SOLUTION_PLAN.md  threat-model.md
docs/implementation-plans/: README.md  af_xdp_plan.md  browser_runtime_plan.md  io_uring_plan.md  mobile_plan.md  nic_rss_netlink_plan.md  production_pir_plan.md
docs/spec/: CHRONOS-CRYPTO-SPEC.md
docs/test-vectors/: README.md  crp7_data_packet_v1.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: chronos_lite_config.rs  chronosd_config.rs  dataplane_lifecycle.rs  directory_api.rs  dpf_query_request.rs  handshake_packet.rs  relay_packet.rs  route_packet.rs  secure_cell.rs  stego_ws_frame.rs
scripts/: entropy_check.py  run_mix_experiments.sh  static_audit.py  validation_pass.sh
tools/chronos-nettest/: Cargo.toml  README.md
tools/chronos-nettest/src/: main.rs
