[workspace]
resolver = "2"
members = [
    "crates/chronos-core",
    "crates/chronosd",
    "crates/chronos-lite",
    "crates/chronos-dir",
    "crates/chronos-wasm",
]

[workspace.dependencies]
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
log = "0.4"
thiserror = "1.0"
