[package]
name = "chronos-core"
version = "7.0.0"
edition = "2024"
authors = ["Clean-Slate Anonymous Networking Working Group"]
description = "Core cryptographic and mathematical primitives for CHRONOS v7.0"

[dependencies]
sha2 = "0.10"
chacha20poly1305 = "0.10"
hkdf = "0.12"
x25519-dalek = { version = "2", features = ["static_secrets"] }
ml-kem = { version = "0.3", features = ["getrandom", "zeroize"] }
getrandom = "0.2"
subtle = "2"
ed25519-dalek = "2"
