[package]
name = "chronos-dir"
version = "7.0.0"
edition = "2021"
authors = ["Clean-Slate Anonymous Networking Working Group"]
description = "Decentralized HotStuff BFT directory consensus mesh for CHRONOS v7.0"

[dependencies]
chronos-core = { path = "../chronos-core" }
tokio = { version = "1.37", features = ["full"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
