[package]
name = "chronos-wasm"
version = "7.0.0"
edition = "2021"
authors = ["Clean-Slate Anonymous Networking Working Group"]
description = "WebAssembly client runtime for CHRONOS v7.0 (WebTransport, Equihash, Hydra-TCP)"

[dependencies]
chronos-core = { path = "../chronos-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
log = "0.4"
thiserror = "1.0"
