[package]
name = "chronos-wasm"
version = "7.0.0"
edition = "2024"
authors = ["Clean-Slate Anonymous Networking Working Group"]
description = "WebAssembly client runtime for CHRONOS v7.0 (WebTransport, Equihash, Hydra-TCP)"

[dependencies]
chronos-core = { path = "../chronos-core" }
log = "0.4"
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]
